Improve object text method:
* Fix: Now works in the main program
* Allow overlaying onto an existing image
* Move text overlay method into the API
* Using transparent colors now works

--- a/openBVE/OpenBveApi/OpenBveApi.csproj
+++ b/openBVE/OpenBveApi/OpenBveApi.csproj
@@ -76,6 +76,7 @@
     <Compile Include="SharedMesh.cs">
       <DependentUpon>Objects.cs</DependentUpon>
     </Compile>
+    <Compile Include="Textures.TextOverlay.cs" />
     <Compile Include="Sounds.cs" />
     <Compile Include="Textures.cs" />
     <Compile Include="Textures.Functions.cs">
