--- a/openBVE/OpenBve/Data/Languages/ca-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/ca-ES.cfg
@@ -20,7 +20,7 @@ options = Configuració
 homepage = Visita el lloc web oficial
 updates = Comprova actualitzacions
 updates_invalid = No s'ha pogut establir la connexió amb el servidor. No s'ha pogut obtenir la informació de la versió.
-updates_old = Ja tens l'última versió desponible.
+updates_old = Ja teniu l'última versió desponible.
 updates_new = La nova versió [version] ([date]) ja està disponible al lloc web oficial. Canvis en l'última versió:\r\n\r\n
 close = Surt
 
@@ -39,15 +39,15 @@ controls_oldversion = S'ha trobat un fitxer antic de configuració de controls.
 controls_reset = S'ha reiniciat la configuració de controls actual als valors per defecte.
 controls_default_oldversion = El fitxer de configuració de controls per defecte es troba en una versió antiga o està corromput.
 controls_default_missing = El fitxer de configuració de controls per defecte no existeix.
-controls_ingame = You are currently running on the [platform] backend. Please use the in-game menu to configure any joystick based controls.
+controls_ingame = Esteu executant l'OpenBVE amb [platform]. Utilitzeu el menú intern del joc per configurar els controls amb joystick.
 sound_openal_version = Es necessita l'OpenAL 1.1. Sembla que teniu la versió 1.0.
 sound_openal_context = No s'ha pogut crear el context OpenAL.
 sound_openal_device = No s'ha pogut obrir el dispositiu de so OpenAL.
 fullscreen_switch1 = S'ha produït un error en canviar al mode de pantalla completa. 
 fullscreen_switch2 = Comproveu la configuració de resolució de pantalla completa.
-route_corrupt_withtrack = The selected route is corrupt: \r\n WithTrack section missing.
-plugin_failure1 = The train plugin [plugin] failed to load. 
-plugin_failure2 = The built-in ATS/ ATC systems will be used instead, which may cause issues.
+route_corrupt_withtrack = La ruta seleccionada està corrompuda: \r\n No s'ha trobat la secció WithTrack.
+plugin_failure1 = No s'ha pogut carregar l'extensió del tren [plugin]. 
+plugin_failure2 = S'utilitzaran els sistemes ATS/ATC per defecte, que poden ser incompatibles.
 
 [start]
 title = Inicia una nova partida
@@ -63,7 +63,7 @@ route_gradient = Desnivells
 route_settings = Configuració
 route_settings_encoding = Codificació:
 route_settings_encoding_preview = Previsualització:
-route_processing = Processing route, please wait.....
+route_processing = Processant la ruta, espereu.....
 train = Tren
 train_selection = Selecció
 train_addons = Extensions
@@ -77,7 +77,7 @@ train_settings = Configuració
 train_settings_encoding = Codificació:
 train_settings_encoding_preview = Previsualització:
 train_notfound = No s'ha pogut trobar el tren predeterminat:\n\n
-train_pluginnotsupported = --- Aquest tren utilitza una extensió de sistema de seguretat incompatible amb vostre sistema operatiu. S'activaran el sistemes de seguretat ATS/ATC per defecte, i poden ocasionar problemes de conducció. ---
+train_pluginnotsupported = --- Aquest tren utilitza una extensió de sistema de seguretat incompatible amb vostre sistema operatiu. S'utilitzaran els sistemes ATS/ATC per defecte, que poden ser incompatibles. ---
 start = Inicia
 start_mode = Mode de conducció:
 start_start = Inicia
@@ -113,58 +113,58 @@ blackbox_format_text = Text formatat
 blackbox_export = Exporta...
 
 [packages]
-proceed = Proceed...
-proceed_anyway = Proceed Anyway
-processing = Processing, please wait...
-shownlist = These are shown in the list below:
-selection_none = No package selected.
-selection_none_website = No website provided.
-install = Install
-install_button = Install Package
-install_header = Install a Package
-install_invalid = This file does not appear to be a valid openBVE package.
-install_version_new = The selected package is already installed, and is a newer version.
-install_version_old = The selected package is already installed, and is an older version.
-install_version_same = The selected package is already installed, and is an identical version.
-install_success = Package installation was successful.
-install_success_header = Installation Successful
-install_success_files = A list of files installed is shown below:
-install_select = Select Package......
-install_dependancies_unmet = The current package has unmet dependancies.
-install_dependancies_unmet_header = Dependancy Error
-creation_button = Create Package
-creation_header = Create a Package
-creation_saveas_button = Save As...
-creation_saveas_label = Save package as:
-creation_dependancies_nextstep = Package details and dependancies may be assigned in the following steps.
-creation_clearselection = Clear Selection
-creation_additems = Add Item(s)
-creation_selecteditems = The following files and folders will be packaged:
-creation_new_guid = The new package has been assinged the following GUID:
-creation_header = Enter Package Details
-creation_name = Please enter a package name.
-creation_author = Please enter a package author.
-creation_description = Please enter a package description.
-creation_version = Please enter a valid package version number in the following format: \r\n 1.0.0
-creation_version_invalid = You have entered an invalid version number. \r\n Please try again.
-creation_success = Package creation was successful.
-creation_success_header = Package Creation Successful
-creation_success_files = The following files were added to your package:
-creation_proceed = Proceed......
-creation_invalid_filename = The selected filename is invalid- Please retry.
-creation_new_id = The new package has been assinged the following GUID:
-creation_replace_id = Replacing the package with the following GUID:
-creation_save = Save Package
-replace_select = Replace this Package
-replace_choose = Please select the package you wish to replace:
-type_route = Route
-type_train = Train
-type_other = Other
-type_select = Please select the package type:
-uninstall_button = Uninstall Package
-uninstall_broken = Some existing packages may be broken by this action.
-uninstall_missing_xml = Unable to uninstall the selected package. \r\n XML file list missing.
-database_save_error = An error occured whilst saving the package database. \r\n Please check for write permissions.
+proceed = Continua...
+proceed_anyway = Continua igualment
+processing = Processant, espereu...
+shownlist = Apareixen al llistat següent:
+selection_none = No s'ha seleccionat cap paquet.
+selection_none_website = No s'ha indicat cap lloc web.
+install = Instal·la
+install_button = Instal·la
+install_header = Instal·la un paquet
+install_invalid = Aquest fitxer no és un paquet per a OpenBVE vàlid.
+install_version_new = El paquet seleccionat ja es troba instal·lat, i es troba en una versió posterior.
+install_version_old = El paquet seleccionat ja es troba instal·lat, i es troba en una versió anterior.
+install_version_same = El paquet seleccionat ja es troba instal·lat, i es troba en la mateixa versió.
+install_success = S'han instal·lat els paquets correctament.
+install_success_header = Instal·lació completada
+install_success_files = Llistat de fitxers instal·lats:
+install_select = Selecciona un paquet......
+install_dependancies_unmet = El paquet actual té dependències que no es poden resoldre.
+install_dependancies_unmet_header = Error de dependències
+creation_button = Nou paquet
+creation_header = Crea un paquet
+creation_saveas_button = Desa...
+creation_saveas_label = Desa a:
+creation_dependancies_nextstep = Ara podreu assignar els detalls i les dependències del paquet.
+creation_clearselection = Esborra la selecció
+creation_additems = Afegir fitxers
+creation_selecteditems = Es crearà un paquet amb els fitxers i carpetes següents:
+creation_new_guid = El nou paquet té assignat el següent GUID:
+creation_header = Detalls del paquet
+creation_name =Nom del paquet.
+creation_author = Autor del paquet.
+creation_description = Descripció del paquet.
+creation_version = Versió (número de versió amb aquest format: 1.0.0)
+creation_version_invalid = Heu triat un número de versió no vàlid. \r\n Torneu-ho a intentar.
+creation_success = S'ha creat el paquet correctament.
+creation_success_header = Paquet creat correctament
+creation_success_files = S'han afegit els fitxers següents al paquet:
+creation_proceed = Continua......
+creation_invalid_filename = El nom del fitxer no és vàlid. \r\n Torneu-ho a intentar
+creation_new_id = El nou paquet té assignat el següent GUID:
+creation_replace_id = Reeemplaça el paquet amb el GUID següent:
+creation_save = Desa el paquet
+replace_select = Reemplaça aquest paquet
+replace_choose = Seleccioneu el paquet que voleu reemplaçar:
+type_route = Ruta
+type_train = Tren
+type_other = Altres
+type_select = Seleccioneu el tipus de paquet:
+uninstall_button = Esborra
+uninstall_broken = Alguns paquets instal·lats quedaran trencats si continueu.
+uninstall_missing_xml = No s'ha pogut esborrar el paquet seleccionat. \r\n No s'ha trobat la llista de fitxers XML.
+database_save_error = S'ha produït un error quan es desava la base de dades dels paquets. \r\n Comproveu els permisos d'escriptura.
 
 [controls]
 title = Personalitza els controls
@@ -179,7 +179,7 @@ add = Afegeix control
 remove = Elimina control
 import = Importa...
 export = Exporta...
-reset = Configuració per defecte
+reset = Reinicia
 up = Mou amunt
 down = Mou avall
 selection = Funció seleccionada actualment
@@ -267,7 +267,7 @@ misc_simulation_blackbox = Activa la caixa negra
 misc_controls = Controls
 misc_controls_joysticks = Joysticks activats
 misc_controls_threshold = Llindar del joystick:
-misc_controls_ebaxis = Activa el fre d'emergència a l'eix del fre
+misc_controls_ebaxis = Fre d'emergència a l'eix del fre
 misc_sound = So
 misc_sound_range = Abast efectiu:
 misc_sound_range_low = Baix
@@ -281,13 +281,13 @@ advanced = Opcions avançades
 advanced_load_advance = Precàrrega
 advanced_disable_displaylists = Desactiva les llistes de pantalla de l'OpenGL
 advanced_timefactor = Factor de temps accelerat
-advanced_unload_textures = Descarrega les textures sense ús
-other = Other
-other_timetable_mode = Timetable mode
-other_timetable_mode_none = None
-other_timetable_mode_default = Default
-other_timetable_mode_autogenerated = Auto-generated timetable
-other_timetable_mode_prefercustom = Prefer custom timetable
+advanced_unload_textures = Esborra textures inactives
+other = Altres
+other_timetable_mode = Mode d'horari
+other_timetable_mode_none = Cap
+other_timetable_mode_default = Per defecte
+other_timetable_mode_autogenerated = Horari autogenerat
+other_timetable_mode_prefercustom = Horari personalitzat
 
 [dialog]
 csvfiles = Fitxers CSV
@@ -520,9 +520,9 @@ CAMERA_ROTATE_CCW = Gira la càmera en sentit antihorari
 CAMERA_ROTATE_CW = Gira la càmera en sentit horari
 CAMERA_ZOOM_IN = Incrementa el zoom
 CAMERA_ZOOM_OUT = Disminueix el zoom
-CAMERA_POI_PREVIOUS = Salta al punt d'interès anterior.
-CAMERA_POI_NEXT = Salta al punt d'interès següent.
-CAMERA_RESET = Reinicia la vista de la càmera a la posició per defecte.
+CAMERA_POI_PREVIOUS = Salta al punt d'interès anterior
+CAMERA_POI_NEXT = Salta al punt d'interès següent
+CAMERA_RESET = Reinicia la vista de la càmera a la posició per defecte
 CAMERA_RESTRICTION = Activa o desactiva la restricció de càmera a la perspectiva interior
 TIMETABLE_TOGGLE = Canvia entre els diferents modes d'horari
 TIMETABLE_UP = Mou l'horari amunt
