Packages- Add translation ability for various missing strings.

--- a/openBVE/OpenBve/Data/Languages/pt-BR.cfg
+++ b/openBVE/OpenBve/Data/Languages/pt-BR.cfg
@@ -23,6 +23,7 @@ updates_invalid = Foi efetuada uma ligação ao Servidor mas a informação sobr
 updates_old = Já dispõe da última versão.
 updates_new = A nova versão [version] ([date]) está disponível para baixar da Página Oficial. Novidades da última versão:\r\n\r\n
 close = Fechar
+packages = Package Management
 
 [mode]
 arcade = Diversão
@@ -119,10 +120,13 @@ processing = Processing, please wait...
 shownlist = These are shown in the list below:
 selection_none = No package selected.
 selection_none_website = No website provided.
+list = Installed Packages
+list_type = Select the type of packages you wish to view:
 install = Install
 install_button = Install Package
 install_header = Install a Package
 install_invalid = This file does not appear to be a valid openBVE package.
+install_version_error = Package Version Error
 install_version_new = The selected package is already installed, and is a newer version.
 install_version_old = The selected package is already installed, and is an older version.
 install_version_same = The selected package is already installed, and is an identical version.
@@ -132,11 +136,15 @@ install_success_files = A list of files installed is shown below:
 install_select = Select Package......
 install_dependancies_unmet = The current package has unmet dependancies.
 install_dependancies_unmet_header = Dependancy Error
+install_dependancies_broken = The following dependancies may be broken by this action:
 creation_button = Create Package
 creation_header = Create a Package
 creation_saveas_button = Save As...
 creation_saveas_label = Save package as:
+creation_dependancies = Select Dependancies
+creation_dependancies_add = Add Dependancy
 creation_dependancies_nextstep = Package details and dependancies may be assigned in the following steps.
+creation_reccommends_add = Add Reccomendation
 creation_clearselection = Clear Selection
 creation_additems = Add Item(s)
 creation_selecteditems = The following files and folders will be packaged:
@@ -161,11 +169,17 @@ type_route = Route
 type_train = Train
 type_other = Other
 type_select = Please select the package type:
+uninstall_failure = Unfortunately, uninstallation of this package failed.
+uninstall_failure_header = Uninstallation Failed
+uninstall_success = Uninstallation of this package was successful.
+uninstall_success_header = Uninstallation Successful
+uninstall_log = A log is shown below:
 uninstall_button = Uninstall Package
 uninstall_broken = Some existing packages may be broken by this action.
 uninstall_missing_xml = Unable to uninstall the selected package. \r\n XML file list missing.
 database_save_error = An error occured whilst saving the package database. \r\n Please check for write permissions.
-
+version_new = New version:
+version_current = Current version:
 [controls]
 title = Personalizar Comandos
 list_command = Comandos
