--- a/openBVE/OpenBve/Data/Languages/ca-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/ca-ES.cfg
@@ -119,10 +119,13 @@ processing = Processant, espereu...
 shownlist = Apareixen al llistat següent:
 selection_none = No s'ha seleccionat cap paquet.
 selection_none_website = No s'ha indicat cap lloc web.
+list = Paquets instal·lats
+list_type = Seleccioneu el tipus de paquet que voleu veure:
 install = Instal·la
 install_button = Instal·la
 install_header = Instal·la un paquet
 install_invalid = Aquest fitxer no és un paquet per a OpenBVE vàlid.
+install_version_error = Error en la versió del paquet
 install_version_new = El paquet seleccionat ja es troba instal·lat, i es troba en una versió posterior.
 install_version_old = El paquet seleccionat ja es troba instal·lat, i es troba en una versió anterior.
 install_version_same = El paquet seleccionat ja es troba instal·lat, i es troba en la mateixa versió.
@@ -132,11 +135,15 @@ install_success_files = Llistat de fitxers instal·lats:
 install_select = Selecciona un paquet......
 install_dependancies_unmet = El paquet actual té dependències que no es poden resoldre.
 install_dependancies_unmet_header = Error de dependències
+install_dependancies_broken = Les següents dependències quedaran trencades si continueu:
 creation_button = Nou paquet
 creation_header = Crea un paquet
 creation_saveas_button = Desa...
 creation_saveas_label = Desa a:
+creation_dependancies = Seleccioneu les dependències
+creation_dependancies_add = Afegeix dependències
 creation_dependancies_nextstep = Ara podreu assignar els detalls i les dependències del paquet.
+creation_reccommends_add = Afegeix recomanació
 creation_clearselection = Esborra la selecció
 creation_additems = Afegir fitxers
 creation_selecteditems = Es crearà un paquet amb els fitxers i carpetes següents:
@@ -161,10 +168,17 @@ type_route = Ruta
 type_train = Tren
 type_other = Altres
 type_select = Seleccioneu el tipus de paquet:
+uninstall_failure = Ha fallat la desinstal·lació del paquet.
+uninstall_failure_header = Error de desinstal·lació
+uninstall_success = S'ha esborrat el paquet correctament.
+uninstall_success_header = Paquet esborrat correctament
+uninstall_log = A continuació es mostra el registre:
 uninstall_button = Esborra
 uninstall_broken = Alguns paquets instal·lats quedaran trencats si continueu.
 uninstall_missing_xml = No s'ha pogut esborrar el paquet seleccionat. \r\n No s'ha trobat la llista de fitxers XML.
 database_save_error = S'ha produït un error quan es desava la base de dades dels paquets. \r\n Comproveu els permisos d'escriptura.
+version_new = Nova versió:
+version_current = Versió actual:
 
 [controls]
 title = Personalitza els controls
