Add 'Check for updates' to main panel.

--- a/openBVE/OpenBve/Data/Languages/ca-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/ca-ES.cfg
@@ -21,7 +21,7 @@ homepage = Visita el lloc web oficial
 updates = Comprova actualitzacions
 updates_invalid = No s'ha pogut establir la connexió amb el servidor. No s'ha pogut obtenir la informació de la versió.
 updates_old = Ja teniu l'última versió desponible.
-updates_new = La nova versió [version] ([date]) ja està disponible al lloc web oficial. Canvis en l'última versió:\r\n\r\n
+updates_new = La nova versió [version] ([date]) ja està disponible al lloc web oficial.
 close = Surt
 
 [mode]
