--- a/openBVE/OpenBve/Data/Languages/cs-CZ.cfg
+++ b/openBVE/OpenBve/Data/Languages/cs-CZ.cfg
@@ -21,7 +21,7 @@ homepage = Navštívit oficiální stránku
 updates = Zkontrolovat aktualizace
 updates_invalid = Spojení se servrem navázáno, ale informace o verzi nelze získat.
 updates_old = Máte nejaktuálnější verzi.
-updates_new = Nová verze [version] ([date]) je ke stažení na domovských stránkách. Změny v poslední verzi:\r\n\r\n
+updates_new = Nová verze [version] ([date]) je ke stažení na domovských stránkách.
 close = Zavřít
 packages = Package Management
 
