--- a/openBVE/OpenBve/Data/Languages/de-DE.cfg
+++ b/openBVE/OpenBve/Data/Languages/de-DE.cfg
@@ -21,7 +21,7 @@ homepage = Offizielle Homepage
 updates = Nach Updates suchen
 updates_invalid = Eine Verbindung zum Server konnte hergestellt werden, aber die Versionsinformationen wurden nicht gefunden.
 updates_old = Das Programm ist bereits auf dem neuesten Stand.
-updates_new = Die neue Programmversion [version] ([date]) ist auf der offiziellen Homepage verfügbar. Es gibt folgende Änderungen:\r\n\r\n
+updates_new = Die neue Programmversion [version] ([date]) ist auf der offiziellen Homepage verfügbar.
 close = Beenden
 
 [mode]
