--- a/openBVE/OpenBve/Data/Languages/es-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/es-ES.cfg
@@ -21,7 +21,7 @@ homepage = Visitar página oficial
 updates = Buscar actualizaciones
 updates_invalid = Se ha establecido conexión con el servidor. Sin embargo, no es posible encontrar la última versión.
 updates_old = Ya tienes la última versión instalada.
-updates_new = La nueva versión [version] ([date]) está disponible para descarga en la página oficial. Cambios en la última versión:\r\n\r\n
+updates_new = La nueva versión [version] ([date]) está disponible para descarga en la página oficial.
 close = Cerrar
 packages = Package Management
 
