--- a/openBVE/OpenBve/Data/Languages/fi-FI.cfg
+++ b/openBVE/OpenBve/Data/Languages/fi-FI.cfg
@@ -21,7 +21,7 @@ homepage = Virallinen kotisivu
 updates = Tarkista päivitykset
 updates_invalid = Palvelimeen ei saatu yhteyttä. Valitettavasti versiotietoja ei voitu hakea.
 updates_old = Käytät jo uusinta versiota openBVE:stä.
-updates_new = Uusi versio [version] ([date]) on saatavilla. Uusia ominaisuuksia ovat mm.:\r\n\r\n
+updates_new = Uusi versio [version] ([date]) on saatavilla.
 close = Sulje
 packages = Package Management
 
