--- a/openBVE/OpenBve/Data/Languages/fr-FR.cfg
+++ b/openBVE/OpenBve/Data/Languages/fr-FR.cfg
@@ -21,7 +21,7 @@ homepage = Site Web officiel
 updates = Recherche mises à jour
 updates_invalid = La connexion au serveur peut être établie, mais l'information concernant la version ne peut pas être récupérée.
 updates_old = Vous avez déjà la dernière version !
-updates_new = Une nouvelle version [version] ([date]) est téléchargeable depuis le Site Web officiel. Les changements inclus dans cette version sont :\r\n\r\n
+updates_new = Une nouvelle version [version] ([date]) est téléchargeable depuis le Site Web officiel.
 close = Fermer
 packages = Package Management
 
