--- a/openBVE/OpenBve/Data/Languages/hu-HU.cfg
+++ b/openBVE/OpenBve/Data/Languages/hu-HU.cfg
@@ -21,7 +21,7 @@ homepage = Az openBVE weboldala
 updates = Frissítések keresése
 updates_invalid = Sikerült kapcsolódni a kiszolgálóhoz, de a verzióinformációkat nem lehetett elérni.
 updates_old = A legújabb programverziót használja.
-updates_new = Új programváltozat tölthető le a honlapról: [version] ([date]). Változások a legfrissebb verzióban:\r\n\r\n
+updates_new = Új programváltozat tölthető le a honlapról: [version] ([date]).
 close = Bezárás
 packages = Package Management
 
