--- a/openBVE/OpenBve/Data/Languages/it-IT.cfg
+++ b/openBVE/OpenBve/Data/Languages/it-IT.cfg
@@ -21,7 +21,7 @@ homepage = Visita il sito ufficiale
 updates = Controllo aggiornamenti
 updates_invalid = È stata effettuata una connessione al server, ma non è stato possibile ottenere informazioni sulla versione.
 updates_old = Hai già l'ultima versione disponibile.
-updates_new = La nuova versione [version] ([date]) è disponibile sul sito ufficiale. Modifiche nell'ultima versione:\r\n\r\n
+updates_new = La nuova versione [version] ([date]) è disponibile sul sito ufficiale.
 close = Chiudi
 packages = Package Management
 
