--- a/openBVE/OpenBve/Data/Languages/nl-NL.cfg
+++ b/openBVE/OpenBve/Data/Languages/nl-NL.cfg
@@ -21,7 +21,7 @@ homepage = Bezoek officiële website
 updates = Updates...
 updates_invalid = Hoewel er wel een verbinding met de server kon worden gemaakt, kon er helaas geen informatie worden verkregen over de meest recente versie.
 updates_old = Je hebt de laatste versie al.
-updates_new = De nieuwe versie [version] ([date]) is te downloaden op de officiële website. Veranderingen in de laatste versie:\r\n\r\n
+updates_new = De nieuwe versie [version] ([date]) is te downloaden op de officiële website.
 close = Afsluiten
 packages = Package Management
 
