--- a/openBVE/OpenBve/Data/Languages/pl-PL.cfg
+++ b/openBVE/OpenBve/Data/Languages/pl-PL.cfg
@@ -21,7 +21,7 @@ homepage = Oficjalna strona
 updates = Sprawdź aktualizacje
 updates_invalid = Połączenie z serwerem być może zostało nawiązane ale informacje o wersji nie mogły być uzyskane...
 updates_old = Posiadasz aktualną wersję
-updates_new = Nowa wersja [version] ([date]) jest dostępna do pobrania z oficjalnej strony. Zmiany w stosunku do ostatniej wersji:\r\n\r\n
+updates_new = Nowa wersja [version] ([date]) jest dostępna do pobrania z oficjalnej strony.
 close = Zamknij
 packages = Package Management
 
