--- a/openBVE/OpenBve/Data/Languages/pt-BR.cfg
+++ b/openBVE/OpenBve/Data/Languages/pt-BR.cfg
@@ -21,7 +21,7 @@ homepage = Visite a página oficial
 updates = Procurar atualizações
 updates_invalid = Foi efetuada uma ligação ao Servidor mas a informação sobre a versão não foi obtida.
 updates_old = Já dispõe da última versão.
-updates_new = A nova versão [version] ([date]) está disponível para baixar da Página Oficial. Novidades da última versão:\r\n\r\n
+updates_new = A nova versão [version] ([date]) está disponível para baixar da Página Oficial.
 close = Fechar
 packages = Package Management
 
