--- a/openBVE/OpenBve/Data/Languages/pt-PT.cfg
+++ b/openBVE/OpenBve/Data/Languages/pt-PT.cfg
@@ -21,7 +21,7 @@ homepage = Visite a página oficial
 updates = Procurar actualizações
 updates_invalid = Foi efectuada uma ligação ao Servidor mas a informação acerca da versão não foi obtida.
 updates_old = Já dispõe da última versão.
-updates_new = A nova versão [version] ([date]) está disponível para baixar da Página Oficial. Modificado na última versão:\r\n\r\n
+updates_new = A nova versão [version] ([date]) está disponível para baixar da Página Oficial.
 close = Fechar
 packages = Package Management
 
