--- a/openBVE/OpenBve/Data/Languages/ro-RO.cfg
+++ b/openBVE/OpenBve/Data/Languages/ro-RO.cfg
@@ -21,7 +21,7 @@ homepage = Vizitează pagina oficială
 updates = Verifică Actualizări
 updates_invalid = O conexiune la server nu a putut fi stabilită. Din păcate, informaţiile despre ultima versiune nu au putut fi descărcate.
 updates_old = Aveţi deja ultima versiune.
-updates_new = Noua versiune [version] ([date]) se poate descărca de pe pagina oficială. Shimbări în ultima versiune:\r\n\r\n
+updates_new = Noua versiune [version] ([date]) se poate descărca de pe pagina oficială.
 close = Închide
 packages = Package Management
 
