--- a/openBVE/OpenBve/Data/Languages/ru-RU.cfg
+++ b/openBVE/OpenBve/Data/Languages/ru-RU.cfg
@@ -21,7 +21,7 @@ homepage = Официальный сайт
 updates = Проверить обновления
 updates_invalid = Подключение к серверу возможно, но сведения о версии не могут быть получены.
 updates_old = У вас уже установлена самая последняя версия
-updates_new = Новая версия [version] ([date]) доступна для загрузки на официальном сайте. Изменения в последней версии:\r\n\r\n
+updates_new = Новая версия [version] ([date]) доступна для загрузки на официальном сайте.
 close = Закрыть
 packages = Package Management
 
