--- a/openBVE/OpenBve/Data/Languages/uk-UA.cfg
+++ b/openBVE/OpenBve/Data/Languages/uk-UA.cfg
@@ -21,7 +21,7 @@ homepage = Офіційний сайт
 updates = Перевірити оновлення
 updates_invalid = Існує з’єднання із сервером, проте неможливо отримати інформацію про нові версії...
 updates_old = Дана версія є найновішою
-updates_new = Нова версія [version] ([date]) доступна для скачування з офіційного сайту. Зміни в останній версії:\r\n\r\n
+updates_new = Нова версія [version] ([date]) доступна для скачування з офіційного сайту.
 close = Закрити
 packages = Package Management
 
