--- a/openBVE/OpenBve/Data/Languages/en-US.cfg
+++ b/openBVE/OpenBve/Data/Languages/en-US.cfg
@@ -21,7 +21,7 @@ homepage = Visit official homepage
 updates = Check for updates
 updates_invalid = A connection to the server could be established. Unfortunately, the version information could not be retrieved.
 updates_old = You already have the latest version.
-updates_new = The new version [version] ([date]) is available for download on the Official Homepage. Changes in the latest version:\r\n\r\n
+updates_new = The new version [version] ([date]) is available for download on the Official Homepage.
 close = Close
 packages = Package Management
 
