--- a/openBVE/OpenBve/Data/Languages/ca-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/ca-ES.cfg
@@ -113,7 +113,6 @@ blackbox_format_text = Text formatat
 blackbox_export = Exporta...
 
 [packages]
-<<<<<<< HEAD
 proceed = Proceed...
 proceed_anyway = Proceed Anyway
 processing = Processing, please wait...
@@ -180,7 +179,6 @@ uninstall_missing_xml = Unable to uninstall the selected package. \r\n XML file 
 database_save_error = An error occured whilst saving the package database. \r\n Please check for write permissions.
 version_new = New version:
 version_current = Current version:
-=======
 proceed = Continua...
 proceed_anyway = Continua igualment
 processing = Processant, espereu...
@@ -232,6 +230,7 @@ creation_replace_id = Reeemplaça el paquet amb el GUID següent:
 creation_save = Desa el paquet
 replace_select = Reemplaça aquest paquet
 replace_choose = Seleccioneu el paquet que voleu reemplaçar:
+replace_noneavailable = No packages are currently installed.
 type_route = Ruta
 type_train = Tren
 type_other = Altres
@@ -244,10 +243,10 @@ uninstall_log = A continuació es mostra el registre:
 uninstall_button = Esborra
 uninstall_broken = Alguns paquets instal·lats quedaran trencats si continueu.
 uninstall_missing_xml = No s'ha pogut esborrar el paquet seleccionat. \r\n No s'ha trobat la llista de fitxers XML.
+uninstall_database_remove = Do you wish to remove this package from the database?
 database_save_error = S'ha produït un error quan es desava la base de dades dels paquets. \r\n Comproveu els permisos d'escriptura.
 version_new = Nova versió:
 version_current = Versió actual:
->>>>>>> patch-1
 
 [controls]
 title = Personalitza els controls
