--- a/openBVE/OpenBve/Data/Languages/de-DE.cfg
+++ b/openBVE/OpenBve/Data/Languages/de-DE.cfg
@@ -164,6 +164,7 @@ creation_replace_id = Replacing the package with the following GUID:
 creation_save = Save Package
 replace_select = Replace this Package
 replace_choose = Please select the package you wish to replace:
+replace_noneavailable = No packages are currently installed.
 type_route = Route
 type_train = Train
 type_other = Other
@@ -176,6 +177,7 @@ uninstall_log = A log is shown below:
 uninstall_button = Uninstall Package
 uninstall_broken = Some existing packages may be broken by this action.
 uninstall_missing_xml = Unable to uninstall the selected package. \r\n XML file list missing.
+uninstall_database_remove = Do you wish to remove this package from the database?
 database_save_error = An error occured whilst saving the package database. \r\n Please check for write permissions.
 version_new = New version:
 version_current = Current version:
