Control configuration: * Add descriptions to new controls (Requires translation) * Mark SECURITY controls with the obsolete attribute: These are non-specific, and usage varys wildly between trains.
Please use the new controls for future plugins (Happy to add anything logical), so that we can have a consistant key configuration between trains.

--- a/openBVE/OpenBve/Data/Languages/en-GB.cfg
+++ b/openBVE/OpenBve/Data/Languages/en-GB.cfg
@@ -571,6 +571,29 @@ DEBUG_NORMALS = Shows or hides vertex normals
 DEBUG_BRAKE = Shows or hides brake system debug output
 ROUTE_INFORMATION = Shows or hides the route information window
 
+;------ New controls ----
+
+;;Common
+WIPER_SPEED_UP = Increases the speed of the windscreen wipers
+WIPER_SPEED_DOWN = Decreases the speed of the windscreen wipers
+FILL_FUEL = Fills fuel
+HEADLIGHTS = Toggles the train headlights
+;;Steam engine
+LIVE_STEAM_INJECTOR = Activates or deactivates the live steam injector
+EXHAUST_STEAM_INJECTOR = Activates or deactivates the exhaust steam injector
+INCREASE_CUTOFF = Increases the cutoff
+DECREASE_CUTOFF = Decreases the cutoff
+BLOWERS = Activates or deactivates the blowers
+;;Diesel engine
+ENGINE_START = Starts the engine
+ENGINE_STOP = Stops the engine
+GEAR_UP = Shifts up a gear in a train fitted with a gearbox
+GEAR_DOWN = Shifts down a gear in a train fitted with a gearbox
+;;Electric engine
+RAISE_PANTOGRAPH = Raises the pantograph
+LOWER_PANTOGRAPH = Lowers the pantograph
+MAIN_BREAKER = Toggles the main breaker
+
 ; ----- keys -----
 
 [keys]
