--- a/openBVE/OpenBve/Data/Languages/de-DE.cfg
+++ b/openBVE/OpenBve/Data/Languages/de-DE.cfg
@@ -569,6 +569,29 @@ DEBUG_NORMALS = Zeigt/Versteckt die Anzeige der Normalenvektoren
 DEBUG_BRAKE = Zeigt/Versteckt die Debug-Anzeige für die Bremsen
 ROUTE_INFORMATION = Zeigt/versteckt das Infofenster
 
+;------ New controls ----
+
+;;Common
+WIPER_SPEED_UP = Increases the speed of the windscreen wipers
+WIPER_SPEED_DOWN = Decreases the speed of the windscreen wipers
+FILL_FUEL = Fills fuel
+HEADLIGHTS = Toggles the train headlights
+;;Steam engine
+LIVE_STEAM_INJECTOR = Activates or deactivates the live steam injector
+EXHAUST_STEAM_INJECTOR = Activates or deactivates the exhaust steam injector
+INCREASE_CUTOFF = Increases the cutoff
+DECREASE_CUTOFF = Decreases the cutoff
+BLOWERS = Activates or deactivates the blowers
+;;Diesel engine
+ENGINE_START = Starts the engine
+ENGINE_STOP = Stops the engine
+GEAR_UP = Shifts up a gear in a train fitted with a gearbox
+GEAR_DOWN = Shifts down a gear in a train fitted with a gearbox
+;;Electric engine
+RAISE_PANTOGRAPH = Raises the pantograph
+LOWER_PANTOGRAPH = Lowers the pantograph
+MAIN_BREAKER = Toggles the main breaker
+
 ; ----- keys -----
 
 [keys]
